<resources>
    <string name="app_name">Location tracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Телефон</string>
    <string name="prompt_password">Пароль</string>
    <string name="button_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_user_email">Введите адрес электронной почты</string>
    <string name="invalid_password">Пароль должен быть длиннее 5-ти символов</string>
    <string name="login_failed">"Авторизация не удалась"</string>
    <string name="register_failed">"Регистрация не удалась"</string>
    <string name="verification_failed">"Верификация не удалась"</string>
    <string name="button_register">Зарегистрироваться</string>
    <string name="text_or">или</string>
    <string name="empty_fild_error">Поле не должно быть пустым</string>
    <string name="text_use_for_login">Использовать для входа</string>

    <string-array name="spinner_login">
        <item>Email</item>
        <item>Номер мобильного телефона</item>
    </string-array>

    <string name="text_tracking_stop">Местонахождение не отслеживется</string>
    <string name="text_tracking_start">Местонахождение отслеживется</string>
    <string name="sine_out">Выйти</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="text_use_for_register">Выберите способ регистрации</string>
    <string name="prompt_name">Ваше имя</string>
    <string name="action_sign_in">Sign in or register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sms_cod">Введите SMS код</string>
    <string name="button_verification">Подтвердить</string>
    <string name="permissions_denied">Для работы необходим доступ к местоположению</string>

</resources>